trunk/Archive2/cf/0c1606525fc5d2/output
main.cpp:7:67: warning: missing terminating " character
     const char* hex_str = ""4D65727279 4368726973746D6173 41726F6E" ;
                                                                   ^
main.cpp:7:5: error: missing terminating " character
     const char* hex_str = ""4D65727279 4368726973746D6173 41726F6E" ;
     ^
main.cpp: In function 'int main()':
main.cpp:7:29: error: expected ',' or ';' before numeric constant
     const char* hex_str = ""4D65727279 4368726973746D6173 41726F6E" ;
                             ^
main.cpp:12:9: error: 'result_string' was not declared in this scope
         result_string += ch ;
         ^
main.cpp:14:18: error: 'result_string' was not declared in this scope
     std::cout << result_string << '\n' ;
                  ^
